--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+}
+
 .section-title {
     font-size: 2.23rem;
 }
@@ -154,6 +158,10 @@ h1, h2, h3 {
 .work .section-subtitle {
     color: #7952b3;
     background-color: #fff;
+}
+
+.project-wrapper {
+    width: fit-content;
 }
 
 .project {
